--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <!-- Carousel of Ads -->
     <div class="carousel-container">
         <div class="carousel" id="carousel">
-            <a href="https://sourjnet.com.br/#" target="_blank">
+            <a href="https://sourjnet.com.br/" target="_blank">
                 <img src="rjnet.jpeg" alt="Anunciante 1">
             </a>
             <a href="https://www.facebook.com/tucaparafusos/?locale=pt_BR" target="_blank">
@@ -181,6 +181,15 @@
             </a>
             <a href="https://www.instagram.com/acouguepantanalcentro/" target="_blank">
                 <img src="pantanal.jpg" alt="Anunciante 3">
+            </a>
+            <a href="https://www.instagram.com/lojasnalin/" target="_blank">
+                <img src="nalin.png" alt="Anunciante 1">
+            </a>
+            <a href="https://www.facebook.com/casagloborj/" target="_blank">
+                <img src="casa.png" alt="Anunciante 2">
+            </a>
+            <a href="https://www.facebook.com/restaurantecantinhodaval/?locale=br_FR" target="_blank">
+                <img src="val.jpg" alt="Anunciante 3">
             </a>
         </div>
     </div>
