--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
     <link href="icon.png" rel="icon" sizes="250x250" type="image/png">
+    <meta name="ppck-ver" content="c05c78cb1350c22e9e6611aea1879d4a" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-98MVHJ8P6C"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
