--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <meta http-equiv="refresh" content="0; url=https://radiopositiva.github.io/fm/">
     <link href="icon.png" rel="icon" sizes="250x250" type="image/png">
     <meta name="ppck-ver" content="c05c78cb1350c22e9e6611aea1879d4a" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-98MVHJ8P6C"></script>
