--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
     <div class="info">
         <div id="status">Parado.</div>
     </div>
-
+<!-- Grade de Programação (Incorporada por iframe) -->
+    <div class="iframe-container">
+        <iframe src="prog.html" allowfullscreen></iframe>
+    </div>
     <!-- Carrossel de Anúncios -->
     <div class="carousel-container">
         <div class="carousel" id="carousel">
