--- a/test.html
+++ b/test.html
@@ -1,107 +1,110 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH2FT54LW7"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-YH2FT54LW7');
-    </script>
-    <link href="icon.png" rel="icon" sizes="250x250" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="ppck-ver" content="c05c78cb1350c22e9e6611aea1879d4a">
-    <title>POSITIVA FM</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Popup com iFrame Centralizado</title>
+    <style>
+        /* Estilos básicos */
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding-top: 50px;
+            background-color: #f5f5f5;
+        }
+        
+        /* Botão para abrir o popup */
+        #openPopupBtn {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+        
+        /* Container do popup */
+        .popup-container {
+            display: none; /* Oculto por padrão */
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* Fundo semitransparente */
+            align-items: center;
+            justify-content: center;
+            z-index: 1000;
+        }
+
+        /* Conteúdo do popup centralizado e responsivo */
+        .popup-content {
+            position: relative;
+            width: 90%;
+            max-width: 600px;
+            height: 80vh;
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* Botão de fechar */
+        .close-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 20px;
+            color: #333;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        /* Estilo do iFrame para torná-lo responsivo */
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+            flex-grow: 1; /* Faz o iframe ocupar o espaço restante */
+        }
+    </style>
 </head>
 <body>
+    <!-- Botão para abrir o popup -->
+    <button id="openPopupBtn">Programação completa</button>
 
-<!-- Barra com a data no topo da página -->
-<div class="top-bar">
-    <span id="dateDisplay"></span>
-</div>
-
-<!-- Botões de Mídia Social no Topo -->
-<div class="social-buttons top">
-    <a href="https://api.whatsapp.com/send/?phone=5524999936696&text&app_absent=0" target="_blank" class="social-button">
-        <img src="https://cdn-icons-png.flaticon.com/128/13051/13051741.png" alt="WhatsApp">
-    </a>
-    <a href="https://www.instagram.com/positivafm95/" target="_blank" class="social-button">
-        <img src="https://cdn-icons-png.flaticon.com/128/3955/3955024.png" alt="Instagram">
-    </a>
-    <a href="https://www.facebook.com/positivafm95/" target="_blank" class="social-button">
-        <img src="https://cdn-icons-png.flaticon.com/128/733/733547.png" alt="Facebook">
-    </a>
-    <a href="https://x.com/radiopositivafm/" target="_blank" class="social-button">
-        <img src="https://cdn-icons-png.flaticon.com/128/5969/5969020.png" alt="Twitter">
-    </a>
-    <a href="https://www.youtube.com/@topangra" target="_blank" class="social-button">
-        <img src="https://cdn-icons-png.flaticon.com/128/3670/3670147.png" alt="YouTube">
-    </a>
-    <a href="https://radiopositivafm.com.br/" target="_blank" class="social-button">
-        <img src="https://cdn-icons-png.flaticon.com/128/3308/3308395.png" alt="Website">
-    </a>
-</div>
-
-<h1>POSITIVA FM</h1>
-<audio id="radio" src="https://stm37.srvstm.com:6888/stream" preload="auto"></audio>
-<button id="playStopButton" onclick="toggleRadio()">Play</button>
-
-<div class="info">
-    <div id="status">Parado.</div>
-</div>
-
-<!-- Grade de Programação -->
-<div class="programacao-container">
-  <h2>Grade de Programação</h2>
-  <div class="tabs">
-    <div class="tab" onclick="openTab(event, 'Domingo')">Domingo</div>
-    <div class="tab" onclick="openTab(event, 'Segunda')">Segunda</div>
-    <div class="tab" onclick="openTab(event, 'Terça')">Terça</div>
-    <div class="tab" onclick="openTab(event, 'Quarta')">Quarta</div>
-    <div class="tab" onclick="openTab(event, 'Quinta')">Quinta</div>
-    <div class="tab" onclick="openTab(event, 'Sexta')">Sexta</div>
-    <div class="tab" onclick="openTab(event, 'Sábado')">Sábado</div>
-  </div>
-  
-  <!-- Conteúdo das abas (de "Domingo" a "Sábado") -->
-  <!-- Inclua aqui o conteúdo da programação conforme fornecido -->
-  <!-- ... -->
-  
-</div>
-
-<!-- Carrossel de Anúncios -->
-<div class="carousel-container">
-    <div class="carousel" id="carousel">
-        <a href="https://sourjnet.com.br/" target="_blank">
-            <img src="rjnet.jpeg" alt="Anunciante RJNet">
-        </a>
-        <a href="https://www.facebook.com/tucaparafusos/?locale=pt_BR" target="_blank">
-            <img src="tuca.jpeg" alt="Anunciante Tuca Parafusos">
-        </a>
-        <a href="https://www.instagram.com/acouguepantanalcentro/" target="_blank">
-            <img src="pantanal.jpg" alt="Açougue Pantanal">
-        </a>
-        <a href="https://www.instagram.com/lojasnalin/" target="_blank">
-            <img src="nalin.png" alt="Lojas Nalin">
-        </a>
-        <a href="https://www.facebook.com/casagloborj/" target="_blank">
-            <img src="casa.png" alt="Casa Globo">
-        </a>
-        <a href="https://www.facebook.com/restaurantecantinhodaval/?locale=br_FR" target="_blank">
-            <img src="val.jpg" alt="Cantinho da Val">
-        </a>
+    <!-- Container do popup -->
+    <div class="popup-container" id="popupContainer">
+        <div class="popup-content">
+            <span class="close-btn" id="closePopupBtn">&times;</span>
+            <!-- iFrame que carrega a página desejada -->
+            <iframe src="prog.html" title="Programação completa"></iframe>
+        </div>
     </div>
-</div>
 
-<script src="script.js"></script>
-<script>
-// Funções JavaScript para abrir abas e destacar o programa atual
-// Copie o script JavaScript da grade de programação aqui
-// ...
-</script>
+    <script>
+        // Funções para abrir e fechar o popup
+        const openPopupBtn = document.getElementById("openPopupBtn");
+        const popupContainer = document.getElementById("popupContainer");
+        const closePopupBtn = document.getElementById("closePopupBtn");
 
+        openPopupBtn.addEventListener("click", () => {
+            popupContainer.style.display = "flex"; // Exibe o popup centralizado
+        });
+
+        closePopupBtn.addEventListener("click", () => {
+            popupContainer.style.display = "none"; // Oculta o popup
+        });
+
+        // Fecha o popup ao clicar fora do conteúdo
+        popupContainer.addEventListener("click", (e) => {
+            if (e.target === popupContainer) {
+                popupContainer.style.display = "none";
+            }
+        });
+    </script>
 </body>
 </html>
