--- a/test.html
+++ b/test.html
@@ -41,9 +41,9 @@
         /* Conteúdo do popup centralizado e responsivo */
         .popup-content {
             position: relative;
-            width: 90%;
-            max-width: 600px;
-            height: 80vh;
+            width: 100%;
+            
+            height: 80%;
             background-color: white;
             padding: 20px;
             border-radius: 8px;
@@ -55,8 +55,8 @@
         /* Botão de fechar */
         .close-btn {
             position: absolute;
-            top: 10px;
-            right: 10px;
+            top: 20px;
+            right: 20px;
             font-size: 20px;
             color: #333;
             cursor: pointer;
