--- a/prog.html
+++ b/prog.html
@@ -7,25 +7,32 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
     }
     .programacao-container {
-      width: 80%;
+      width: 90%;
+      max-width: 500px;
       margin: auto;
-      padding: 20px;
+      padding: 10px;
       background-color: #f4f4f4;
-      border-radius: 8px;
+      border-radius: 1px;
     }
     .tabs {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-around;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
     .tab {
+      flex: 1 1 auto;
       padding: 10px;
       cursor: pointer;
       border: 1px solid #ccc;
       background-color: #ddd;
       border-radius: 4px 4px 0 0;
+      text-align: center;
+      font-size: 14px;
     }
     .tab.active {
       background-color: #fff;
@@ -35,7 +42,7 @@
       display: none;
       border: 1px solid #ccc;
       border-top: none;
-      padding: 20px;
+      padding: 1px;
       background-color: #fff;
       border-radius: 0 0 4px 4px;
     }
@@ -45,9 +52,10 @@
     table {
       width: 100%;
       border-collapse: collapse;
+      font-size: 9px;
     }
     th, td {
-      padding: 10px;
+      padding: 3px;
       border: 1px solid #ddd;
       text-align: left;
     }
@@ -62,7 +70,7 @@
 <body>
 
 <div class="programacao-container">
-  <h2>Grade de Programação</h2>
+  <h2>Programação Completa</h2>
   <div class="tabs">
     <div class="tab" onclick="openTab(event, 'Domingo')">Domingo</div>
     <div class="tab" onclick="openTab(event, 'Segunda')">Segunda</div>
@@ -175,6 +183,7 @@
       <tr><td>18:00</td><td>RADIO CONTROLE</td><td>Zareta</td></tr>
     </table>
   </div>
+
 
 </div>
 
