--- a/index.html
+++ b/index.html
@@ -87,9 +87,6 @@
         </div>
     </div>
     
-    <script src="script.js"></script>
-    <iframe data-aa='2365312' src='//ad.a-ads.com/2365312?size=320x50' style='largura:320px; altura:50px; borda:0px; preenchimento:0; estouro:oculto; cor de fundo: transparente;'></iframe>
-
-    
+<iframe data-aa='2365312' src='//ad.a-ads.com/2365312?size=468x60' style='width:468px; height:60px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
 </body>
 </html>
