--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src="https://cdn-icons-png.flaticon.com/128/3670/3670147.png" alt="YouTube">
         </a>
         <a href="https://radiopositivafm.com.br/" target="_blank" class="social-button">
-            <img src="https://cdn-icons-png.flaticon.com/128/3308/3308395.png" alt="Website">
+            <img src="https://www.radiopositivafm.com.br/storage/img/layouts/1708724399_29787425.png" alt="Website">
         </a>
     </div>
 
