--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             </a>
         </div>
     </div>
+    <div id="sfc89uj22kzxder9b6swhl9sjw7cy1zzxdx"></div><script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=89uj22kzxder9b6swhl9sjw7cy1zzxdx&down=async" async></script><br><a href="https://www.freecounterstat.com">website counters</a><noscript><a href="https://www.freecounterstat.com" title="website counters"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=89uj22kzxder9b6swhl9sjw7cy1zzxdx" border="0" title="website counters" alt="website counters"></a></noscript>
     <script src="script.js"></script>
     <iframe data-aa='2365312' src='//ad.a-ads.com/2365312?size=468x60' style='width:468px; height:60px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
 </body>
