--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            display: flex;
+            display: grid;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
