--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Radio Player</title>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH2FT54LW7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-YH2FT54LW7');
+    </script>
+    <title>Web Radio Positiva</title>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
