--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         gtag('js', new Date());
         gtag('config', 'G-YH2FT54LW7');
     </script>
+    <link href="icon.png" rel="icon" sizes="250x250" type="image/png">
     <title>Web Radio Positiva</title>
     <style>
         body {
