--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH2FT54LW7"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH2FT54LW7"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -11,7 +11,7 @@
         gtag('config', 'G-YH2FT54LW7');
     </script>
     <link href="icon.png" rel="icon" sizes="250x250" type="image/png">
-    <title>Web Radio Positiva</title>
+    <title>Web Radio Positiva FM</title>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
