--- a/index.html
+++ b/index.html
@@ -334,28 +334,28 @@
             <div class="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item">
-                        <a href="https://exemplo.com" target="_blank" title="Clique para saber mais">
+                        <a href="https://www.facebook.com/casagloborj/" target="_blank" title="Clique para saber mais">
                             <img src="casa.png" alt="Imagem de Notícias" style="width: 100%; border-radius: 10px;">
                     </div>
                     <div class="carousel-item">
-                        <a href="https://exemplo.com" target="_blank" title="Clique para saber mais">
+                        <a href="https://www.instagram.com/acouguepantanalcentro/" target="_blank" title="Clique para saber mais">
                             <img src="pantanal.jpg" alt="Imagem de Notícias" style="width: 100%; border-radius: 10px;">
 
                     </div>
                     <div class="carousel-item">
-                        <a href="https://exemplo.com" target="_blank" title="Clique para saber mais">
+                        <a href="https://sourjnet.com.br/" target="_blank" title="Clique para saber mais">
                             <img src="rjnet.jpeg" alt="Imagem de Notícias" style="width: 100%; border-radius: 10px;">
 
                     </div><div class="carousel-item">
-                        <a href="https://exemplo.com" target="_blank" title="Clique para saber mais">
+                        <a href="https://www.facebook.com/tucaparafusos/?locale=pt_BR" target="_blank" title="Clique para saber mais">
                             <img src="tuca.jpeg" alt="Imagem de Notícias" style="width: 100%; border-radius: 10px;">
 
                     </div><div class="carousel-item">
-                        <a href="https://exemplo.com" target="_blank" title="Clique para saber mais">
+                        <a href="https://www.instagram.com/lojasnalin/" target="_blank" title="Clique para saber mais">
                             <img src="nalin.png" alt="Imagem de Notícias" style="width: 100%; border-radius: 10px;">
 
                     </div><div class="carousel-item">
-                        <a href="https://exemplo.com" target="_blank" title="Clique para saber mais">
+                        <a href="https://www.facebook.com/restaurantecantinhodaval/?locale=br_FR" target="_blank" title="Clique para saber mais">
                             <img src="val.jpg" alt="Imagem de Notícias" style="width: 100%; border-radius: 10px;">
                         </a>
 
