--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         gtag('config', 'G-YH2FT54LW7');
     </script>
     <link href="icon.png" rel="icon" sizes="250x250" type="image/png">
-    <title>Web Radio Positiva FM</title>
+    <title>Radio Positiva FM</title>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
